# pulse

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  GLOSSARY.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  vercel-site.yml
apps/shell/: Cargo.toml  build.rs
apps/shell/src/: main.rs
apps/shell/src/shared/: mod.rs  persistence.rs  simple_app.rs  state.rs
apps/shell/src/shared/simple_handler/: mod.rs  win.rs
apps/site/: README.md  package.json
apps/site/src/app/: globals.css  layout.tsx  page.tsx
apps/site/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/ui/: index.html  package.json  tailwind.config.js
apps/ui/src/: App.tsx  index.css  main.tsx
apps/ui/src/components/: settings-modal.tsx  workspace-sidebar.tsx
apps/ui/src/components/ui/: button.tsx  scroll-area.tsx
apps/ui/src/lib/: commands.ts  pulse-host.ts  session-state.ts  workspace.ts
crates/pulse-core/: Cargo.toml
crates/pulse-core/src/: lib.rs
docs/: architecture.md  capabilities.md  deployment.md  persistence.md  roadmap.md  troubleshooting.md  vision.md
docs/decisions/: 0001-windowing-bootstrap.md
scripts/: cargo-with-cef-env.ps1  dev.ps1  package-windows-release.ps1  setup-cef.ps1
