[workspace]
resolver = "2"
members = [
  "apps/shell",
  "crates/pulse-core",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Pulse Contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

