[package]
name = "pulse-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
cef = { version = "=143.2.0", default-features = false }
cef-dll-sys = "=143.2.0"
pulse-core = { path = "../../crates/pulse-core" }
serde.workspace = true
serde_json.workspace = true
url = "2.5.7"
velopack = "0.0.1369-g1d5c984"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
